# WatchAgent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.cursor/agents/: data-layer-reviewer.md  event-logic-reviewer.md  ops-ci-agent.md  poller-resilience-reviewer.md  qa-verifier.md
.cursor/rules/: architecture-patterns.mdc  consistency-and-failure-model.mdc  db-access.mdc  event-record-shape.mdc  logging-contract.mdc  poller-error-handling.mdc
.cursor/skills/analyze_data/: SKILL.md  analyze.py
.cursor/skills/replay_events/: SKILL.md  replay.py
.github/workflows/: ci.yml
scripts/: backfill.py  smoke_test.sh
src/watchagent/: __init__.py  climate.py  climate_normals.json  config.py  events.py  logging_setup.py  main.py  openmeteo.py  poller.py  storage.py
src/watchagent/api/: routes.py  schemas.py
tests/: conftest.py  test_api.py  test_dedup.py  test_events.py
